--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "review": "node node_modules/elevation-pr/index.js"
