--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nasa-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.19.0"
+  },
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
