--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
   },
   "description": "A Full-stack react NASA-project",
   "main": "server.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "express-validator": "^6.9.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alaahag/nasa-app.git"
