--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "express-validator": "^6.9.2",
     "mongoose": "^5.11.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -48,9 +49,7 @@
   },
   "description": "A Full-stack react NASA-project",
   "main": "server.js",
-  "devDependencies": {
-    "express-validator": "^6.9.2"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alaahag/nasa-app.git"
